rota dos planos em construcao

--- a/.env
+++ b/.env
@@ -69,3 +69,8 @@ STRIPE_KEY = ""
 STRIPE_SECRET=""
 STRIPE_WEBHOOK_SECRET=""
 
+STRIPE_PRODUCT_ID = "prod_TMfflDQPfU9YBW"
+STRIPE_MONTHLY_PRICE_ID ="price_1SPwKQ2cCDkaioJGOLWmDf9y"
+STRIPE_YEARLY_PRICE_ID = "price_1SPwMx2cCDkaioJGbdHnnYry"
+STRIPE_LONGEST_ID ="price_1SPwOm2cCDkaioJGWgubiVxk"
+
