integracao com a plataforma de pagamento conluida

--- a/.env
+++ b/.env
@@ -64,7 +64,10 @@ AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
 
-
+#stripe
+STRIPE_KEY = ""
+STRIPE_SECRET=""
+STRIPE_WEBHOOK_SECRET=""
 
 STRIPE_PRODUCT_ID = "prod_TMfflDQPfU9YBW"
 STRIPE_MONTHLY_PRICE_ID ="price_1SPwKQ2cCDkaioJGOLWmDf9y"
